<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_margin="@dimen/_20dp"
        android:padding="@dimen/_10dp"
        android:elevation="@dimen/_3dp"
        android:orientation="horizontal">
        <ProgressBar
            android:id="@+id/progressbar_indeterminate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:padding="@dimen/_6dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/dialog_layout"
            android:layout_width="match_parent"
            android:visibility="gone"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_dialog"
            android:padding="@dimen/_8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <TextView
                android:id="@+id/titleView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/progressDialog_title"
                android:layout_gravity="center"
                android:textSize="@dimen/_20sp"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/layoutContent"
                android:visibility="gone"
                android:layout_marginBottom="@dimen/_4dp"
                android:layout_marginTop="@dimen/_4dp"
                android:layout_marginStart="@dimen/_12dp"
                android:textStyle="bold"
                />
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layoutContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_4dp"
                android:layout_marginBottom="@dimen/_4dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:padding="@dimen/_2dp">

                <TextView
                    android:id="@+id/textView_indeterminate"
                    android:layout_width="@dimen/_0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/loading"
                    android:maxEms="26"
                    android:layout_marginStart="@dimen/_15dp"
                    android:visibility="gone"
                    android:layout_marginEnd="@dimen/_35dp"
                    android:textSize="@dimen/_17sp"
                    android:ellipsize="none"
                    android:scrollHorizontally="false"
                    android:textColor="@color/black"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    />

                <TextView
                    android:id="@+id/textView_determinate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_12dp"
                    android:ellipsize="none"
                    android:maxEms="26"
                    android:visibility="gone"
                    android:scrollHorizontally="false"
                    android:text="@string/loading"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_17sp"
                    app:layout_constraintBottom_toTopOf="@id/progressbar_determinate"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    />

                <ProgressBar
                    android:id="@+id/progressbar_determinate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@android:style/Widget.Material.ProgressBar.Horizontal"
                    android:indeterminateOnly="false"
                    android:padding="@dimen/_6dp"
                    android:layout_marginStart="@dimen/_12dp"
                    android:visibility="gone"
                    android:layout_marginEnd="@dimen/_12dp"
                    android:layout_marginTop="@dimen/_12dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textView_determinate"
                    />
                <TextView
                    android:id="@+id/progressTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="@id/progressbar_determinate"
                    app:layout_constraintTop_toBottomOf="@id/progressbar_determinate"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_13sp"
                    android:layout_marginTop="@dimen/_4dp"
                    android:layout_marginStart="@dimen/_8dp"
                    />
            </androidx.constraintlayout.widget.ConstraintLayout>
            <Button
                android:id="@+id/negativeButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_6dp"
                android:layout_marginEnd="@dimen/_6dp"
                android:layout_marginBottom="@dimen/_2dp"
                app:layout_constraintTop_toBottomOf="@id/layoutContent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                style="?android:attr/borderlessButtonStyle"
                android:textColor="@color/black"
                android:textSize="@dimen/_16sp"
                android:textStyle="bold"
                android:gravity="center"
                android:text="@string/cancel_text"
                android:visibility="gone"
                android:textAllCaps="true"
                android:clickable="true"
                android:focusable="true"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
